--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Alexandre Farias <0800alefarias@gmail.com>"]
 python = "3.8.5"
 seaborn = "^0.11.1"
 streamlit = "^0.79.0"
+pydantic = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2.2"
