--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Alexandre Farias <0800alefarias@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "3.8.5"
-seaborn = "^0.11.1"
-streamlit = "^0.79.0"
-pydantic = "^1.8.1"
+seaborn = "0.11.1"
+streamlit = "0.79.0"
+pydantic = "1.8.1"
+altair = "4.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2.2"
