--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v2
+        with:
+          python-version: 3.8.5
       - name: Get poetry
         run: |
           pip install poetry==1.1.5
